[package]
name = "merkle_partial"
version = "0.0.0"
authors = ["Matt Garnett <matt.garnett@consensys.net>"]
edition = "2018"

[dependencies]
ethereum-types = "0.6.0"
typenum = "1.10.0"
hashing = { git = "https://github.com/sigp/lighthouse", branch="master" }
tree_hash = { git = "https://github.com/sigp/lighthouse", branch="master" }
ssz_types = { git = "https://github.com/sigp/lighthouse", branch="master" }
eth2_ssz = { git = "https://github.com/sigp/lighthouse", branch="master" }
eth2_ssz_derive = { git = "https://github.com/sigp/lighthouse", branch="master" }
