[package]
name = "proof"
version = "0.0.0"
authors = ["Matt Garnett <matt.garnett@consensys.net>"]
license = "Apache-2.0"
description = "Library for interacting with SSZ merkle tree proofs."
keywords = ["merkle tree proof", "merkle partial", "ssz"]
edition = "2018"

[dependencies]
arborist = { version = "0.0.5", optional = true }
bonsai = { git = "https://github.com/lightclient/bonsai.git", branch="master", default-features = false, features = ["u128"] }
[target.'cfg(feature = "generate")'.dependencies]
oof = { version = "0.1.1", features = ["generate"] }
[target.'cfg(not(feature = "generate"))'.dependencies]
oof = "0.1.1"
ethereum-types = "0.6.0"
typenum = "1.10.0"
sha2 = "0.8.0"
eth2_ssz = "0.1.2"
eth2_ssz_derive = "0.1.0"

[features]
default = []
generate = ["arborist"]
