[package]
name = "proof_derive"
version = "0.0.0"
authors = ["Matt Garnett <matt.garnett@consensys.net>", "Paul Hauner <paul@sigmaprime.io>"]
license = "Apache-2.0"
description = "Derive macro for `proof` crate."
repository = "https://github.com/c-o-l-o-r/proof"
keywords = ["merkle tree proof", "merkle partial", "ssz"]
edition = "2018"

[lib]
name = "proof_derive"
proc-macro = true

[dependencies]
syn = "0.15"
quote = "0.6"
proc-macro2 = "0.4.30"
proof = { path = "../" }

[dev-dependencies]
ethereum-types = "0.6.0"
typenum = "1.10"
ssz_types = { git = "https://github.com/sigp/lighthouse", branch="master" }
hex = "0.3.2"
